--- a/secstidif/platformio.ini
+++ b/secstidif/platformio.ini
@@ -18,7 +18,7 @@ lib_deps =
 		DHT sensor library@1.3.7
 		Adafruit Unified Sensor@1.0.3
 		ArduinoJson@^5.12.0
-		adafruit/Adafruit MAX31855 library @ ^1.2.1
+		Adafruit MAX31855@1.2.1
 		BH1750@0.0.0
 		DallasTemperature@3.8.0
 		MAX31855@0.2.4
@@ -27,7 +27,3 @@ lib_deps =
 		TimeAlarms@0.0.0
 		Time@1.5
 		WifiManager@1.0.0
-		ESP8266WebServer@1.0
-		EEPROM@1.0
-		SPI@1.0
-		Wire@1.0
