--- a/secstidef/platformio.ini
+++ b/secstidef/platformio.ini
@@ -18,15 +18,15 @@ lib_deps =
 		DHT sensor library@1.3.7
 		Adafruit Unified Sensor@1.0.3
 		ArduinoJson@^5.12.0
-		adafruit/Adafruit MAX31855 library @ ^1.2.1
+		adafruit/Adafruit MAX31855 library @ ^1.3.1
 		BH1750@0.0.0
 		DallasTemperature@3.8.0
 		MAX31855@0.2.4
 		OneWire@2.3.4
 		PubSubClient@2.7
-		TimeAlarms@0.0.0
+		paulstoffren/TimeAlarms @0.0.0-alpha+sha.c291c1ddad
 		Time@1.5
-		WifiManager@1.0.0
+		tzapu/WifiManager @ ^0.16.0
 		ESP8266WebServer@1.0
 		EEPROM@1.0
 		SPI@1.0
